--- a/style.css
+++ b/style.css
@@ -1,1 +1,68 @@
+html, body {
+ margin: 0;
+ padding: 0;
+ }
+body {
+ background-color: #F6E7DA; 
+ font-family: Verdana, sans-serif; 
+ font-size: 100%;
+}
+ footer {
 
+background-color: #8B6963; 
+ font-family: Verdana, sans-serif; 
+ font-size: 100%;
+  color: #FAF8F8;
+}
+
+ }
+h1 {
+ font-size: 200%; 
+ color: #9D8B5F; 
+ text-align: center;
+ }
+h2 {
+ font-size: 150%; 
+ background-color: #D79157;
+ color: #080302; 
+ padding-left: 15px;
+ }
+
+h3{
+font-size: 150%;
+ background-color: #E1AB7F; 
+ color: #80605B; 
+ padding-left: 20px;
+
+}
+h4{
+font-size: 150%;
+ background-color: ##EAC4A4;  
+ color: #80605B; 
+ padding-left: 55px;
+
+
+}
+
+p,ul,li,td {
+ color: black; 
+ }
+a:link {
+ color: #0A0A3E;
+ text-decoration: underline;
+ }
+a:visited {
+ color: #4B4BE3;
+ }
+a:hover {
+ color: red;
+ text-decoration: none;
+}
+a:active, a:focus {
+ color: red;
+}
+
+img {
+	width: 100px;
+	height: 100px;
+}
